Added comments and changed the element tags in the main section

--- a/index.html
+++ b/index.html
@@ -27,13 +27,15 @@
 
     <!--This is the main picture-->
     <img class="hero"></img>
+    <!--<img src="" alt="" add this >
 
 
 
     <!-- Main content of the page-->
     <main class="content">
 
-<!--Sub-section one: search-engine-optimization -->
+<!--Sub-section one: search-engine-optimization 
+still need to add the alt to the images-->
         <article class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -59,7 +61,7 @@
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        </article>
+        </art>
     </main>
 
 
