Organized the CSS file and changed the classes for the main articles

--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
 
 
 
-    <!-- Main content of the page-->
+    <!-- Main content of the page--> 
     <main class="content">
 
 <!--Sub-section one: search-engine-optimization 
 still need to add the alt to the images-->
-        <article class="search-engine-optimization">
+        <article class="main-articles">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -45,7 +45,7 @@ still need to add the alt to the images-->
         </article>
 
 <!--sub-section two:online-reputation-management -->
-        <article id="online-reputation-management" class="online-reputation-management">
+        <article id="online-reputation-management" class="main-articles">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
@@ -55,7 +55,7 @@ still need to add the alt to the images-->
 
 
         <!--Sub-section three:social-media-marketing-->
-        <article id="social-media-marketing" class="social-media-marketing">
+        <article id="social-media-marketing" class="main-articles">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
